Updated movement to use fixed point math.

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,2 +1,16 @@
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+libs.LWJGL.classpath=\
+    ${base}/LWJGL/jinput.jar;\
+    ${base}/LWJGL/lwjgl.jar;\
+    ${base}/LWJGL/lwjgl_util.jar
+libs.LWJGL_Applet.classpath=\
+    ${base}/LWJGL_Applet/lwjgl_util_applet.jar;\
+    ${base}/LWJGL_Applet/lwjgl_applet.jar;\
+    ${base}/LWJGL_Applet/macosx_natives.jar;\
+    ${base}/LWJGL_Applet/linux_natives.jar;\
+    ${base}/LWJGL_Applet/solaris_natives.jar;\
+    ${base}/LWJGL_Applet/windows_natives.jar
+libs.Slick.classpath=\
+    ${base}/Slick/slick-util.jar;\
+    ${base}/Slick/slick.jar
